<resources>
    <string name="app_name">PracticalTest01Var06</string>
    <string name="numberLabel">Number</string>
    <string name="playButton">Play</string>
    <string name="title_activity_practical_test01_var02_play">PracticalTest01Var02PlayActivity
    </string>

    <string name="guess">Guess</string>
    <string name="generate">Generate</string>
    <string name="check">Check</string>
    <string name="score">Score</string>
    <string name="back">Back</string>
    <string name="title_activity_practical_test01_var06_secondary">
        PracticalTest01Var06SecondaryActivity
    </string>
</resources>
