<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="practicaltest01var06.eim.systems.cs.pub.ro.practicaltest01var06.PracticalTest01Var02PlayActivity"
    tools:showIn="@layout/activity_practical_test01_var02_play">

    <EditText
        android:id="@+id/guessNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guess"/>

    <GridLayout
        android:id="@+id/gridButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="1"
        android:columnCount="2"
        android:layout_below="@id/guessNumber">
        <Button
            android:id="@+id/generate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generate"/>
        <Button
            android:id="@+id/check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check"/>

    </GridLayout>

    <EditText
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gridButtons"
        android:text="@string/score"/>
    <Button
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/score"
        android:text="@string/back"/>
</RelativeLayout>
